--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,17 +3,17 @@
 </header>
 <main>
   <div class="container-cards">
-    <div class="card">
+    <div class="card" [routerLink]="['/calculadora']">
       <img src="assets/images/atividade-1.png" alt="Atividade 1">
-      <span>Atividade 1</span>
+      <h3>Calculadora</h3>
     </div>
     <div class="card">
       <img src="assets/images/atividade-2.png" alt="Atividade 2">
-      <span>Atividade 2</span>
+      <h3>Atividade 2</h3>
     </div>
     <div class="card">
       <img src="assets/images/atividade-3.png" alt="Atividade 3">
-      <span>Atividade 3</span>
+      <h3>Atividade 3</h3>
     </div>
   </div>
 </main>
