--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,6 +25,11 @@ header {
     align-items: center;
     width: 20%;
 
+    &:hover {
+      cursor: pointer;
+      scale: 1.1;
+    }
+
     img {
       height: 150px;
     }
