--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,1 +1,9 @@
-<p>usuarios works!</p>
+<div class="usuarios">
+  <div class="pesquisa">
+    <input type="text" [(ngModel)]="textoPesquisa">
+    <button (click)="pesquisar()"> Pesquisar </button>
+  </div>
+  <div class="cards">
+    <app-card *ngFor="let usuario of listagemUsuariosPesquisa" [elemento]="usuario"></app-card>
+  </div>
+</div>
