--- a/src/app/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro-usuario/cadastro-usuario.component.html
@@ -30,7 +30,7 @@
         class="cadastrar"
         (click)="cadastrar()"
       >
-        Cadastrar
+        {{ idUsuario ? 'Editar' : 'Cadastrar' }}
       </button>
     </div>
   </form>
