--- a/src/app/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro-usuario/cadastro-usuario.component.html
@@ -30,7 +30,7 @@
       <button
         type="button"
         class="cadastrar"
-        (click)="cadastrar()"
+        (click)="submitForm()"
       >
         {{ idUsuario ? 'Editar' : 'Cadastrar' }}
       </button>
