Atividade 26 - Ajustes projeto Atividades

--- a/src/app/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro-usuario/cadastro-usuario.component.html
@@ -1,4 +1,5 @@
 <div class="cadastro-usuario">
+  <!-- Exemplo formulário Reactive Forms -->
   <form [formGroup]="formCadastro">
     <fieldset>
       <label>Nome Completo *</label>
