--- a/src/app/cadastro-usuario/cadastro-usuario.component.scss
+++ b/src/app/cadastro-usuario/cadastro-usuario.component.scss
@@ -1,6 +1,6 @@
 .cadastro-usuario {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
