--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="login">
+  <!-- Exemplo formulário Template Driven -->
   <form #atividadeLogin="ngForm">
     <fieldset>
       <label>E-mail</label>
