--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,8 +1,9 @@
 header {
   width: 100%;
-  background-color: #cae5fd;
-  height: 52px;
+  background-color: #2f9cfb;
+  height: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
 }
