--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -5,32 +5,29 @@
     </div>
     <div class="teclado">
       <div class="fileira">
-        <button (click)="tratarSelecao('7')">7</button>
-        <button (click)="tratarSelecao('8')">8</button>
-        <button (click)="tratarSelecao('9')">9</button>
-        <button (click)="tratarSelecao('/')">/</button>
+        <button class="numerico" (click)="tratarSelecao('7')">7</button>
+        <button class="numerico" (click)="tratarSelecao('8')">8</button>
+        <button class="numerico" (click)="tratarSelecao('9')">9</button>
+        <button class="operacao" (click)="tratarSelecao('/')">/</button>
       </div>
       <div class="fileira">
-        <button (click)="tratarSelecao('4')">4</button>
-        <button (click)="tratarSelecao('5')">5</button>
-        <button (click)="tratarSelecao('6')">6</button>
-        <button (click)="tratarSelecao('*')">X</button>
+        <button class="numerico" (click)="tratarSelecao('4')">4</button>
+        <button class="numerico" (click)="tratarSelecao('5')">5</button>
+        <button class="numerico" (click)="tratarSelecao('6')">6</button>
+        <button class="operacao" (click)="tratarSelecao('*')">X</button>
       </div>
       <div class="fileira">
-        <button (click)="tratarSelecao('1')">1</button>
-        <button (click)="tratarSelecao('2')">2</button>
-        <button (click)="tratarSelecao('3')">3</button>
-        <button (click)="tratarSelecao('+')">+</button>
+        <button class="numerico" (click)="tratarSelecao('1')">1</button>
+        <button class="numerico" (click)="tratarSelecao('2')">2</button>
+        <button class="numerico" (click)="tratarSelecao('3')">3</button>
+        <button class="operacao" (click)="tratarSelecao('+')">+</button>
       </div>
       <div class="fileira">
-        <button (click)="limpar()">C</button>
-        <button (click)="tratarSelecao('0')">0</button>
-        <button (click)="tratarSelecao('.')">.</button>
-        <button (click)="calcularResultado()">=</button>
+        <button class="acao" (click)="limpar()">C</button>
+        <button class="numerico" (click)="tratarSelecao('0')">0</button>
+        <button class="acao" (click)="calcularResultado()">=</button>
+        <button class="operacao" (click)="tratarSelecao('-')">-</button>
       </div>
     </div>
   </div>
-  <button class="voltar" [routerLink]="['/home']" >
-    Voltar
-  </button>
 </div>
