--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 .container-cards {
   margin-top: 25px;
   display: flex;
+  flex-flow: wrap;
   justify-content: space-around;
   width: 100%;
   height: 100%;
