--- a/src/app/usuarios/usuarios.component.scss
+++ b/src/app/usuarios/usuarios.component.scss
@@ -1,6 +1,6 @@
 .usuarios {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 90vh;
   display: flex;
   flex-direction: column;
 
@@ -23,14 +23,13 @@
       justify-content: center;
       align-items: center;
       border-radius: 4px;
-      background-color: #cae5fd;
+      background-color: #2f9cfb;
       border: 1px solid #cae5fd;
+      color: white;
 
       &:hover {
         cursor: pointer;
         scale: 1.1;
-        background-color: #2d6595;
-        color: white;
       }
     }
   }
